log/build_2025-12-04_17-53-37/Rover/stderr.log
  File "/home/pradyun/Assignment2_ws/install/Rover/lib/python3.10/site-packages/Rover/pub1.py", line 2
    from rclpy.node import Nodeimport rclpy
                                      ^^^^^
SyntaxError: invalid syntax

